--- a/music-client/package.json
+++ b/music-client/package.json
@@ -8,9 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@videojs-player/vue": "^1.0.0",
     "axios": "^0.26.0",
     "core-js": "^3.8.3",
     "element-plus": "^2.0.4",
+    "video.js": "^8.0.4",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
