--- a/music-server/src/main/resources/application.properties
+++ b/music-server/src/main/resources/application.properties
@@ -22,3 +22,10 @@ spring.redis.lettuce.pool.max-wait=-1
 spring.redis.lettuce.pool.max-idle=5
 spring.redis.lettuce.pool.min-idle=0
 spring.profiles.active=dev
+
+# 令牌自定义标识
+token.header=Authorization
+# 令牌密钥
+token.secret=abcdefghijklmnopqrstuvwxyz
+# 令牌有效期（默认30分钟）
+token.expireTime=30
