完善客户端

--- a/music-server/.gitignore
+++ b/music-server/.gitignore
@@ -11,11 +11,6 @@
 .sts4-cache
 target/
 .DS_Store
-../img/
-../song/
-img/
-song/
-logs/
 
 ### IntelliJ IDEA ###
 .idea
@@ -30,4 +25,4 @@ logs/
 /dist/
 /nbdist/
 /.nb-gradle/
-/video/
+/resource/
