完善文件下载

--- a/music-server/src/main/resources/application-dev.properties
+++ b/music-server/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
 spring.datasource.url=jdbc:mysql://47.96.95.29:3306/music?serverTimezone=Asia/Shanghai&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=whf0710.
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
